# vulcan-os

./: .gitignore  CMakeLists.txt  README.md  main.c  stm32h743.ld
cmake/: arm-none-eabi.cmake
hal/: startup_stm32h743.s  vulcan_adc.c  vulcan_clock.c  vulcan_dma.c  vulcan_gpio.c  vulcan_spi.c  vulcan_uart.c
include/: vulcan.h  vulcan_adc.h  vulcan_clock.h  vulcan_dma.h  vulcan_gpio.h  vulcan_mem.h  vulcan_mutex.h  vulcan_spi.h  vulcan_task.h  vulcan_uart.h
kernel/: vulcan_mem.c  vulcan_mutex.c  vulcan_sched.c
